# CENG477HW3

./: CMakeLists.txt  git.bat  run.bat  run.sh
ext/: CMakeLists.txt
ext/glad/: CMakeLists.txt  glad.c
ext/glad/include/glad/: glad.h
ext/glm/glm/: CMakeLists.txt
ext/glm/test/gtc/: gtc_type_aligned.cpp
ext/stb_image/: CMakeLists.txt  stb_image_LICENSE
src/: main.cpp  utility.cpp  utility.h
working_dir/: PlanetRenderer
working_dir/shaders/: debug.frag  generic.vert
